--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,35 @@
   <groupId>ru.spb.nicetu</groupId>
   <artifactId>oestikfx2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <properties>
+    <oestik.core.version>2.1.104</oestik.core.version>
+  </properties>
+  
+    <dependencies>
+      <dependency>
+        <groupId>ru.spb.nicetu.oestik.clients</groupId>
+        <artifactId>oestik-core</artifactId>
+        <version>${oestik.core.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>2.2</version>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.11</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.17</version>
+      </dependency>
+    </dependencies>
+  
   <build>
     <resources>
       <resource>
